--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       <h2 class="title">Our Menu</h2>
       <div class="menu__field">
         <div class="container">
-          <div class="menu__item">
+          <!-- <div class="menu__item">
             <img src="img/tabs/1.png" alt="vegy" />
             <h3 class="menu__item-subtitle">Plan "Usual"</h3>
             <div class="menu__item-descr">
@@ -276,8 +276,8 @@
               <div class="menu__item-cost">Price:</div>
               <div class="menu__item-total"><span>$10</span> month</div>
             </div>
-          </div>
-          <div class="menu__item">
+          </div> -->
+          <!-- <div class="menu__item">
             <img src="img/tabs/2.jpg" alt="elite" />
             <h3 class="menu__item-subtitle">Plan “Premium”</h3>
             <div class="menu__item-descr">
@@ -288,8 +288,8 @@
               <div class="menu__item-cost">Price:</div>
               <div class="menu__item-total"><span>$15</span> month</div>
             </div>
-          </div>
-          <div class="menu__item">
+          </div> -->
+          <!-- <div class="menu__item">
             <img src="img/tabs/3.jpg" alt="post" />
             <h3 class="menu__item-subtitle">Plan "VIP"</h3>
             <div class="menu__item-descr">
@@ -300,7 +300,7 @@
               <div class="menu__item-cost">Price:</div>
               <div class="menu__item-total"><span>$20</span> month</div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
